Bug 506497 - Unable to change account with a scheduled transaction
Summary: Unable to change account with a scheduled transaction
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-02 16:12 UTC by tneo
Modified: 2025-07-05 07:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
submit scheduled transaction (26.09 KB, image/png)
2025-07-02 16:12 UTC, tneo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tneo 2025-07-02 16:12:27 UTC
Created attachment 182869 [details]
submit scheduled transaction

SUMMARY
Scheduled transaction is no longer able to change the assigned account.

STEPS TO REPRODUCE
1. Schedule a transaction
2. Enter the scheduled transaction to the books
3. In the pop-up window change the assigned account from step 1 to a different account. 

OBSERVED RESULT
In the pop-up window to submit my scheduled transaction I'm no longer able to change the assigned account that was associated with the scheduled transaction. In version 5.2 this option is removed.

EXPECTED RESULT
The option to change the account that I set up with the schedule to any different account of my choosing.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250630
KDE Plasma Version: 6.4.1
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2025-07-05 07:47:59 UTC
Git commit 07871e8b262ab4cc7f7a6c372cf316843a6664d4 by Thomas Baumgart.
Committed on 05/07/2025 at 07:47.
Pushed by tbaumgart into branch '5.2'.

Add account combo to enter schedule dialog
FIXED-IN: 5.2.1

M  +1    -0    kmymoney/views/kenterscheduledlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/07871e8b262ab4cc7f7a6c372cf316843a6664d4
Comment 2 Thomas Baumgart 2025-07-05 07:48:33 UTC
Git commit c762ea6f45476db70095bf4d7a11d7b8485c54b1 by Thomas Baumgart.
Committed on 05/07/2025 at 07:48.
Pushed by tbaumgart into branch 'master'.

Add account combo to enter schedule dialog
FIXED-IN: 5.2.1
(cherry picked from commit c1bc0f274fac4434e0c2c7a5c67a752fd97baaf8)

M  +1    -0    kmymoney/views/kenterscheduledlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/c762ea6f45476db70095bf4d7a11d7b8485c54b1