Add account combo to enter schedule dialog

BUG: 506497
FIXED-IN: 5.2.1
(cherry picked from commit c1bc0f274fac4434e0c2c7a5c67a752fd97baaf8)